--- a/configs/artnet2dmx4_defconfig
+++ b/configs/artnet2dmx4_defconfig
@@ -20,7 +20,8 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="artnet2dmx4/linuxconfig"
 BR2_LINUX_KERNEL_UIMAGE=y
 BR2_LINUX_KERNEL_UIMAGE_LOADADDR="0x80008000"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="am335x-boneblack"
+BR2_LINUX_KERNEL_USE_CUSTOM_DTS=y
+BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="artnet2dmx4/am335x-boneblack.dts"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_BUSYBOX_SELINUX=y
 BR2_PACKAGE_BZIP2=y
