Add stuff for pixel stripes

--- a/configs/artnet2dmx4_defconfig
+++ b/configs/artnet2dmx4_defconfig
@@ -14,6 +14,7 @@ BR2_ROOTFS_MERGED_USR=y
 BR2_TARGET_GENERIC_HOSTNAME="Artnet2Dmx4"
 BR2_TARGET_GENERIC_ISSUE="Welcome to Artnet2Dmx4 linux"
 BR2_GENERATE_LOCALE="en_US"
+BR2_ROOTFS_OVERLAY="artnet2dmx4/fs-oberlay"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="artnet2dmx4/linuxconfig"
