Saving default setup

--- a/artnet2dmx4/fs-overlay/root/.ola/ola-spi.conf
+++ b/artnet2dmx4/fs-overlay/root/.ola/ola-spi.conf
@@ -1,6 +1,6 @@
 base_uid = 7a70:00000100
 device_prefix = spidev
-enabled = true
+enabled = false
 spidev1.0-0-device-label = SPI Device - spidev1.0
 spidev1.0-0-dmx-address = 1
 spidev1.0-0-personality = 1
@@ -8,5 +8,5 @@ spidev1.0-0-pixel-count = 25
 spidev1.0-backend = software
 spidev1.0-ports = 1
 spidev1.0-spi-ce-high = false
-spidev1.0-spi-speed = 1000000
+spidev1.0-spi-speed = 800000
 spidev1.0-sync-port = 0
