--- a/artnet2dmx4/fs-overlay/root/.ola/ola-uartdmx.conf
+++ b/artnet2dmx4/fs-overlay/root/.ola/ola-uartdmx.conf
@@ -1,2 +1,13 @@
-device = /dev/ttyACM0
-enabled = false
+/dev/ttyO1-break = 100
+/dev/ttyO1-malf = 100
+/dev/ttyO2-break = 100
+/dev/ttyO2-malf = 100
+/dev/ttyO4-break = 100
+/dev/ttyO4-malf = 100
+/dev/ttyO5-break = 100
+/dev/ttyO5-malf = 100
+device = /dev/ttyO1
+device = /dev/ttyO2
+device = /dev/ttyO4
+device = /dev/ttyO5
+enabled = true
