--- a/artnet2dmx4/am335x-boneblack.dts
+++ b/artnet2dmx4/am335x-boneblack.dts
@@ -34,32 +34,58 @@
 	status = "okay";
 };
 
-&spi0 {
+&uart1 {
 	status = "okay";
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_spi0>;
-
-	spi0_0{
-		#address-cells = <1>;
-		#size-cells = <0>;
-		compatible ="spidev";
-		reg = <0>;
-		spi-max-frequency=<400000>; // Datasheet of led stripes says: fmax=800kHz
-		};
+	pinctrl-0 = <&uart1_pins>;
 };
 
+&uart2 {
+	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart2_pins>;
+};
 
+&uart4 {
+	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart4_pins>;
+};
+
+&uart5 {
+	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart5_pins>;
+};
 
 &am33xx_pinmux {
-	pinctrl_spi0: pinmux_spi0_pins {
+	uart1_pins: pinmux_uart1_pins {
 		pinctrl-single,pins = <
-			0x150 0x30	/* SPI0_CLK - P9.22 */
-			0x154 0x30	/* SPI0_D0 - P9.21 */
-			0x158 0x10	/* SPI0_D1 - P9.18 */
-			0x15C 0x10 	/* SPI0_CS0 - P9.17 */
+			AM33XX_IOPAD(0x984, PIN_OUTPUT_PULLDOWN | MUX_MODE0)	/* TXD - P9.24 */
+			AM33XX_IOPAD(0x980, PIN_INPUT_PULLUP | MUX_MODE0)	/* RXD - P9.26 */
 		>;
 	};
 
+	uart2_pins: pinmux_uart2_pins {
+		pinctrl-single,pins = <
+			AM33XX_IOPAD(0x954, PIN_OUTPUT_PULLDOWN | MUX_MODE1)	/* TXD - P9.21 */
+			AM33XX_IOPAD(0x950, PIN_INPUT_PULLUP | MUX_MODE1)	/* RXD - P9.22 */
+		>;
+	};
+
+	uart4_pins: pinmux_uart4_pins {
+		pinctrl-single,pins = <
+			AM33XX_IOPAD(0x874, PIN_OUTPUT_PULLDOWN | MUX_MODE6)	/* TXD - P9.13 */
+			AM33XX_IOPAD(0x870, PIN_INPUT_PULLUP | MUX_MODE6)	/* RXD - P9.11 */
+		>;
+	};
+
+	uart5_pins: pinmux_uart5_pins {
+		pinctrl-single,pins = <
+			AM33XX_IOPAD(0x8C0, PIN_OUTPUT_PULLDOWN | MUX_MODE4)	/* TXD - P8.37 */
+			AM33XX_IOPAD(0x8C4, PIN_INPUT_PULLUP | MUX_MODE4)	/* RXD - P8.38 */
+		>;
+	};
 };
 
 &rtc {
