--- a/artnet2dmx4/fs-overlay/root/.ola/ola-e131.conf
+++ b/artnet2dmx4/fs-overlay/root/.ola/ola-e131.conf
@@ -1,7 +1,7 @@
 cid = d9f2e9ff-51cb-42bb-b338-7f613ce61320
 draft_discovery = false
 dscp = 0
-enabled = true
+enabled = false
 ignore_preview = true
 input_ports = 5
 ip = 
