--- a/artnet2dmx4/fs-overlay/root/.ola/ola-port.conf
+++ b/artnet2dmx4/fs-overlay/root/.ola/ola-port.conf
@@ -24,11 +24,18 @@
 14-1-I-3_priority_value = 100
 14-1-I-4_priority_value = 100
 15-spidev1.0-O-0 = 0
-2-1-I-0 = 0
+2-1-I-0 = 1
 2-1-I-0_priority_value = 100
+2-1-I-1 = 2
 2-1-I-1_priority_value = 100
+2-1-I-2 = 3
 2-1-I-2_priority_value = 100
+2-1-I-3 = 4
 2-1-I-3_priority_value = 100
+20-/dev/ttyO1-O-0 = 1
+20-/dev/ttyO2-O-0 = 2
+20-/dev/ttyO4-O-0 = 3
+20-/dev/ttyO5-O-0 = 4
 3-1-I-0_priority_value = 100
 3-1-I-1_priority_value = 100
 3-1-I-2_priority_value = 100
