--- a/artnet2dmx4/fs-overlay/root/.ola/ola-usbserial.conf
+++ b/artnet2dmx4/fs-overlay/root/.ola/ola-usbserial.conf
@@ -2,7 +2,7 @@ device_dir = /dev
 device_prefix = ttyUSB
 device_prefix = cu.usbserial-
 device_prefix = ttyU
-enabled = false
+enabled = true
 pro_fps_limit = 190
 tri_use_raw_rdm = false
 ultra_fps_limit = 40
