updated ola config

--- a/artnet2dmx4/fs-overlay/root/.ola/ola-universe.conf
+++ b/artnet2dmx4/fs-overlay/root/.ola/ola-universe.conf
@@ -1,1 +1,8 @@
-
+uni_1_merge = LTP
+uni_1_name = Universe 1
+uni_2_merge = LTP
+uni_2_name = Universe 2
+uni_3_merge = LTP
+uni_3_name = Universe 3
+uni_4_merge = LTP
+uni_4_name = Universe 4
