--- a/artnet2dmx4/fs-overlay/root/.ola/ola-port.conf
+++ b/artnet2dmx4/fs-overlay/root/.ola/ola-port.conf
@@ -1,4 +1,9 @@
+2-1-I-0_priority_value = 100
+2-1-I-1_priority_value = 100
+2-1-I-2_priority_value = 100
+2-1-I-3_priority_value = 100
 20-/dev/ttyO1-O-0 = 1
 20-/dev/ttyO2-O-0 = 2
 20-/dev/ttyO4-O-0 = 3
 20-/dev/ttyO5-O-0 = 4
+5-04053839-I-0_priority_value = 100
