--- a/artnet2dmx4/fs-overlay/root/.ola/ola-port.conf
+++ b/artnet2dmx4/fs-overlay/root/.ola/ola-port.conf
@@ -6,6 +6,12 @@
 2-1-I-2_priority_value = 100
 2-1-I-3 = 6
 2-1-I-3_priority_value = 100
+2-1-I-4 = 1
+2-1-I-4_priority_value = 100
+2-1-I-5 = 4
+2-1-I-5_priority_value = 100
+2-1-I-6_priority_value = 100
+2-1-I-7_priority_value = 100
 20-/dev/ttyO1-O-0 = 1
 20-/dev/ttyO2-O-0 = 2
 20-/dev/ttyO4-O-0 = 3
