--- a/package/Config.in
+++ b/package/Config.in
@@ -1279,6 +1279,7 @@ menu "Networking"
 	source "package/libwebsockets/Config.in"
 	source "package/lksctp-tools/Config.in"
 	source "package/mongoose/Config.in"
+	source "package/mosquitto/Config.in"
 	source "package/neon/Config.in"
 	source "package/norm/Config.in"
 	source "package/nss-mdns/Config.in"
