--- a/configs/artnet2dmx4_defconfig
+++ b/configs/artnet2dmx4_defconfig
@@ -24,6 +24,7 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_USE_CUSTOM_DTS=y
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="artnet2dmx4/am335x-boneblack.dts"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_BUSYBOX_SELINUX=y
 BR2_PACKAGE_BZIP2=y
 BR2_PACKAGE_BINUTILS=y
@@ -36,6 +37,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT73=y
 BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
+BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_OLA=y
 BR2_PACKAGE_OLA_WEB=y
 BR2_PACKAGE_OLA_SLP=y
@@ -53,8 +55,11 @@ BR2_PACKAGE_OLA_PLUGIN_SANDNET=y
 BR2_PACKAGE_OLA_PLUGIN_SHOWNET=y
 BR2_PACKAGE_OLA_PLUGIN_STAGEPROFI=y
 BR2_PACKAGE_OLA_PLUGIN_USBPRO=y
-BR2_PACKAGE_LIBSOUP=y
-BR2_PACKAGE_LIBSOUP_SSL=y
+BR2_PACKAGE_GNUTLS=y
+BR2_PACKAGE_SQLITE=y
+BR2_PACKAGE_LIBXML2=y
+BR2_PACKAGE_MOSQUITTO=y
+BR2_PACKAGE_LIBGLIB2=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_KMOD=y
